<resources>
    <string name="app_name">Currency Converter App</string>
    <string name="dollar_amt">Dollar Amount ($):</string>
    <string name="convert_to">Convert to:</string>
    <string name="pound">British Pound</string>
    <string name="inr">Indian Rupee</string>
    <string name="euro">Euro</string>
    <string name="txt_convert">Convert</string>
    <string name="txt_close">Close</string>
    <string name="txt_err_amt">Please Enter Amount</string>
    <string name="txt_err_currency">Please Select Currency</string>
</resources>
