<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_large"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/txtLableAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/dollar_amt"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_toRightOf="@id/txtLableAmt"
            android:background="@android:color/white"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"

        android:layout_weight="1">

        <TextView
            android:id="@+id/txtLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/convert_to"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/edtTargetCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_toRightOf="@id/txtLable"
            android:background="@android:color/white"
            android:enabled="false"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/btnPound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTargetCurrency"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toRightOf="@id/txtLable"
            android:background="@android:color/white"
            android:text="@string/pound"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/btnINR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnPound"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toRightOf="@id/txtLable"
            android:background="@android:color/white"
            android:text="@string/inr"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/btnEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnINR"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toRightOf="@id/txtLable"
            android:background="@android:color/white"
            android:text="@string/euro"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_weight="1"
        android:weightSum="2">

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/txt_convert"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/txt_close"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_small"
        android:textStyle="bold" />
</LinearLayout>